[package]
name = "tkbsv"
version = "0.1.0"
authors = ["Dung Ph <dungph@zoho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
surf = "2.1.0"
async-std = "1.6.3"
futures = "0.3.5"
scraper = "0.12.0"
chrono = "0.4.15"
icalendar = "0.9.0"
tide = "0.16.0"
