[package]
name = "tkbsv"
version = "0.1.0"
authors = ["Dung Ph <dungph@zoho.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
md5 = "0.7.0"
surf = { version = "2.3.2", features = ["wasm-client"], default-features = false }
futures = "0.3.19"
scraper = "0.12.0"
chrono = "0.4.19"
worker = "0.0.7"
anyhow = "1.0.51"
icalendar = { path = "icalendar-rs" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
