[package]
name = "tkbsv"
version = "0.1.0"
authors = ["Dung Ph <dungph@zoho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
surf = "2.1.0"
async-std = { version = "1.10.0", features = ["attributes"] }
futures = "0.3.5"
scraper = "0.12.0"
chrono = "0.4.15"
icalendar = "0.13.2"
tide = "0.16.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
sqlx = { version = "0.5.9", features = ["runtime-async-std-native-tls", "postgres", "json", "chrono", "offline"] }
anyhow = "1.0.51"
once_cell = "1.9.0"
